# cmake_project_template

./: CMakeLists.txt  README.md  readme.txt
src/: main.cpp
